# pairpal

./: .gitignore  CMakeLists.txt  Doxyfile
html/: 1_8cpp.html  1_8cpp.js  1_8cpp_source.html  1_8hpp.html  1_8hpp.js  1_8hpp_source.html  annotated.html  class_u_i-members.html  class_u_i.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_97d41d4f3e4ae379f4f3cc1df9993b19.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  navtreedata.js  navtreeindex0.js  ui_8hpp.html  ui_8hpp_source.html
html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  files_0.js  functions_2.js  functions_3.js  searchdata.js
include/: util.hpp
include/ui/: ui.hpp
src/: util.cpp
src/ui/: ui.cpp
test/: test_util.cpp
